all java test pass